[package]
name = "pio-9bit-uart-async"
version = "0.1.0"
authors = ["David Pye <davidmpye@gmail.com>"]
edition = "2021"
repository = "https://github.com/davidmpye/pio-9bit-uart-async"
description = "PIO-backed 9-bit UART designed for use with embassy-rp"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std"]

[dependencies]
embassy-rp = { version = "0.3.0", features = ["rp2040"] }
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embedded-io-async = "0.6.1"
fixed = "1.28.0"
pio = "0.2.1"
pio-proc = "0.2.2"
